[tool.poetry]
name = "SimRacer application server manager"
version = "0.1.0"
description = ""
authors = ["Artem Burenin <burenotti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
